# test-food-store

./: README.md
backend/: README.md  pyproject.toml
backend/food_store/api/v1/: routers.py  serialaizers.py  urls.py  views.py
backend/food_store/cart/: models.py
backend/food_store/food_store/: asgi.py  settings.py  urls.py  wsgi.py
backend/food_store/goods/: admin.py  models.py
